// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render align 1`] = `
Snapshot Diff:
- Received styles
+ Base styles

@@ -6,7 +6,8 @@
      "text-wrap": "pretty",
    },
    Object {
      "font-size": "calc((13 / 13) * 13px)",
      "font-weight": "normal",
+     "text-align": "center",
    },
  ]
`;

exports[`Text should render highlighted words with highlightCaseSensitive 1`] = `
.emotion-0 {
  color: var(--wp-components-color-foreground, var(--wpds-color-foreground-content-neutral, #1e1e1e));
  line-height: 1.4;
  margin: 0;
  text-wrap: pretty;
}

.emotion-1 {
  font-size: calc((13 / 13) * 13px);
  font-weight: normal;
}

.emotion-2 mark {
  background: #f0b849;
  border-radius: 2px;
  box-shadow: 0 0 0 1px rgba( 0, 0, 0, 0.05 ) inset,0 -1px 0 rgba( 0, 0, 0, 0.1 ) inset;
}

<div>
  <span
    class="components-truncate emotion-0 emotion-1 emotion-2 components-text"
    data-wp-c16t="true"
    data-wp-component="Text"
    role="heading"
  >
    <span
      class=""
    >
      Lorem ipsum.
    </span>
  </span>
</div>
`;

exports[`Text snapshot tests should render correctly 1`] = `
.emotion-0 {
  color: var(--wp-components-color-foreground, var(--wpds-color-foreground-content-neutral, #1e1e1e));
  line-height: 1.4;
  margin: 0;
  text-wrap: pretty;
}

.emotion-1 {
  font-size: calc((13 / 13) * 13px);
  font-weight: normal;
}

<div>
  <span
    class="components-truncate emotion-0 emotion-1 components-text"
    data-wp-c16t="true"
    data-wp-component="Text"
  >
    Lorem ipsum.
  </span>
</div>
`;
